# theimc_robot

./: auto_csv_logger.py  demo_robot.rviz
bags/camera_odom/: camera_odom_0.db3  metadata.yaml
bags/ekf_raw_teleop_01/: ekf_raw_teleop_01_0.db3  metadata.yaml
bags/result_wheel_ekf/: metadata.yaml  result_wheel_ekf_0.db3
bags/rotation_with_camera/: metadata.yaml  rotation_with_camera_0.db3
bags/rotation_with_camera_retry/: metadata.yaml  rotation_with_camera_retry_0.db3
bags/rotation_with_camera_retry2/: metadata.yaml  rotation_with_camera_retry2_0.db3
bags/rotation_without_camera/: metadata.yaml  rotation_without_camera_0.db3
bags/rotation_without_camera_retry/: metadata.yaml  rotation_without_camera_retry_0.db3
bags/wheel_odom/: metadata.yaml  wheel_odom_0.db3
config/: last_pose.yaml
csv_logs/: imu_20260716_141424.csv  imu_20260716_142009.csv  imu_20260716_150306.csv  imu_20260716_150349.csv  odom_20260716_141424.csv  odom_20260716_142009.csv  odom_20260716_150306.csv  odom_20260716_150349.csv  scan_20260716_150306.csv
debug/: main.c  ros_comm.c  sensor_process.c
drive_20260716_150305/: drive_20260716_150305_0.db3  metadata.yaml
install/: local_setup.sh  setup.sh
install/camera_perception_pkg/lib/camera_perception_pkg/: aruco_detector_node  rail_info_extractor_node
install/camera_perception_pkg/share/camera_perception_pkg/: package.ps1  package.sh  package.xml
install/debug_pkg/lib/debug_pkg/: check_odom_straight_node  ekf_test_cmd_sequence
install/debug_pkg/share/debug_pkg/: package.ps1  package.sh  package.xml
install/decision_making_pkg/lib/decision_making_pkg/: aruco_docker_node  rail_approach_action_server_node  rail_pd_controller_node
install/decision_making_pkg/share/decision_making_pkg/: package.ps1  package.sh  package.xml
install/interfaces_pkg/share/interfaces_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/localizer_server/lib/localizer_server/: global_localization
install/theimc/share/theimc/: package.sh  (+5 more)
log/: latest_build
src/camera_perception_pkg/: package.xml  setup.py
src/camera_perception_pkg/camera_perception_pkg/: aruco_detector_node.py  image_publisher_node.py  rail_info_extractor_node.py  yolov8_node.py
src/debug_pkg/: setup.py
src/debug_pkg/debug_pkg/: check_odom_straight.py  ekf_test_cmd_sequence.py  yolov8_visualizer_node.py
src/decision_making_pkg/: package.xml  setup.py
src/decision_making_pkg/decision_making_pkg/: aruco_docker_node.py  rail_approach_action_server_node.py
src/interfaces_pkg/: CMakeLists.txt
src/localizer_server/: package.xml  setup.cfg  setup.py
src/localizer_server/localizer_server/: global_localization.py
src/theimc_bringup/: setup.py
src/theimc_bringup/launch/: base_bringup.launch.py  base_bringup_withcam.launch.py  camera.launch.py  mission_bt_runner.launch.py  nav2.launch.py  rail.launch.py  theimc_bringup.launch.py  theimc_bringup_basic.launch.py  theimc_full.launch.py
src/theimc_bringup/params/: ekf.yaml  ekf_jinyoung.yaml  scan_filter.yaml  test_wheel_ekf.yaml  theimc_ydlidar.yaml  twist_mux_params.yaml  vehicle_scan_filter.yaml
src/theimc_bringup/theimc_bringup/: aruco_docker_node.py  robot_agent_node.py  theimc_bringup.py
src/theimc_bt_nodes/: CMakeLists.txt  package.xml  plugins.xml
src/theimc_bt_nodes/bt_xml/: one_rail.xml  one_routine.xml  simple_home_rail_3times_bt.xml  theimc_bt.xml
src/theimc_bt_nodes/config/: rails.yaml
src/theimc_bt_nodes/include/theimc_bt_nodes/: drive_cmd_vel.hpp  for_each_rail.hpp  get_rail_pose.hpp  go_to_pose.hpp  is_battery_low.hpp  publish_rail_command.hpp  rail_approach.hpp  return_home_requested.hpp  save_current_pose.hpp  wait_for_mission_trigger.hpp  wait_for_rail_state.hpp  wait_seconds.hpp
src/theimc_bt_nodes/launch/: mission_bt_runner.launch.py
src/theimc_bt_nodes/src/: drive_cmd_vel.cpp  for_each_rail.cpp  get_rail_pose.cpp  go_to_pose.cpp  is_battery_low.cpp  mission_bt_runner.cpp  publish_rail_command.cpp  rail_approach.cpp  register_nodes.cpp  return_home_requested.cpp  save_current_pose.cpp  wait_for_charge.cpp  wait_for_mission_trigger.cpp  wait_for_rail_state.cpp  wait_seconds.cpp
src/theimc_description/launch/: theimc_description.launch.py
src/theimc_description/urdf/: theimc.urdf
src/theimc_navigation2/: CMakeLists.txt  package.xml
src/theimc_navigation2/behavior_trees/: custom_button_bt.xml  nav_through_poses_no_spin.xml  nav_to_pose_no_spin.xml  nav_to_pose_obstacle_avoidance.xml  navigate_via_route.xml
src/theimc_navigation2/launch/: _bringup_all.launch.py  theimc_cmd_mux.launch.py  theimc_nav2.launch.py  theimc_nav2_obstacle_avoidance.launch.py
src/theimc_navigation2/maps/: keepout_map.pgm  keepout_map.yaml  map.pgm  map.yaml  route_graph.geojson
src/theimc_navigation2/maps/2f/: keepout_map.pgm  map.pgm  map.yaml
src/theimc_navigation2/params/: keepout_filter.yaml  theimc_nav2_obstacle_avoidance_params.yaml  theimc_nav2_obstacle_avoidance_params.yaml.bak-before-mppi-20260724  theimc_nav2_params.yaml  theimc_nav2_params_RPP.yaml  theimc_nav2_params_mppi.yaml  twist_mux.yaml  waypoints.yaml
src/theimc_navigation2/rviz/: _nav2_default_view.rviz  demo_robot.rviz  nav2_default_view.rviz
src/theimc_navigation2/scripts/: waypoint_sender.py
src/theimc_navigation2/src/: check_button_condition.cpp
src/theimc_teleop/theimc_teleop/: theimc_teleop_keyboard.py
test_drive_01/: imu_data.csv  metadata.yaml  odom_data.csv  test_drive_01_0.db3
theimc_bringup/: setup.cfg
theimc_bringup/launch/: theimc_bringup.launch.py
theimc_bringup/params/: theimc_ydlidar.yaml
theimc_bringup/theimc_bringup/: theimc_bringup.py
theimc_description/urdf/: theimc.urdf
(+563 files in other folders)
