<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>theimc_navigation2</name>
  <version>7.0.0</version>
  <description>ROS2 Humble Packages with Custom BT Node</description>

  <maintainer email="jeff@todo.com">erail</maintainer>
  <author email="jeff@todo.com">Leo Cho</author>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- core -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- navigation -->
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_behavior_tree</depend>

  <!-- behavior tree -->
  <depend>behaviortree_cpp_v3</depend>
  <depend>pluginlib</depend>

  <!-- optional tools -->
  <depend>slam_toolbox</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <!-- test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
